--- a/templates/index.html
+++ b/templates/index.html
@@ -8,11 +8,11 @@ I am taking your notes
     <div class="typing" id="typing">
 
 
-        <form action="{{  url_for('index')}}" method="post">
-            <input autofocus type="text" name="note" placeholder="Type in your note">
+        <form action="{{  url_for('index')}}" method="post">            
+            <textarea name="note" autofocus rows="20" cols="30" placeholder="Type in  your  note"></textarea>
             <button>Store</button>
             <p>
-                <a href="{{ url_for('delete') }}">Delete Session</a>
+                <a href="{{ url_for('delete') }}?restart=True">Delete Session</a>
             </p>
         </form>
     </div>
@@ -20,10 +20,15 @@ I am taking your notes
     <div class="content">
         <h3>Your notes:</h3>
         <ul>
-            {% for note in notes %}
-            {% if note %}
-            <li>{{ note }}</li>
-            {% endif  %}
+            {%for i in range(0, len)%}
+                <li>
+                    <span class="note-header">
+                        <b>{{i}}</b>
+                        <a href="{{url_for('delete')}}?id={{i}}">Delete Note</a>
+                        {{ date[i] }}
+                    </span>
+                    <span class="note-content">{{ notes[i] }}</span>
+                </li>
             {% endfor %}
         </ul>
     </div>
